fix: .env.sample dosyasında webhook URL'si güncellendi ve yarn.lock dosyasında npm kayıtları güncellendi

--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,4 @@ HOST=0.0.0.0
 PORT=3000
 ENVIRONMENT=production
 ACCESS_TOKEN_SECRET=your-access-token-secret
-WEBHOOK_URL=http://localhost:3001/webhook
+WEBHOOK_URL=http://89.252.140.98:40001/webhook
