--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ HOST=0.0.0.0
 PORT=3000
 ENVIRONMENT=production
 ACCESS_TOKEN_SECRET=your-access-token-secret
-WEBHOOK_URL=http://89.252.140.98:40001/webhook
+WEBHOOK_URL=https://hzl232.app.n8n.cloud/webhook/773a013e-123a-4685-a71f-165cbfab933a
